[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Small Text/13.png" type="Texture" id=1]
[ext_resource path="res://assets/Small Text/5.png" type="Texture" id=2]
[ext_resource path="res://assets/Small Text/25.png" type="Texture" id=3]
[ext_resource path="res://assets/Small Text/4.png" type="Texture" id=4]
[ext_resource path="res://assets/Small Text/15.png" type="Texture" id=5]
[ext_resource path="res://assets/Small Text/19.png" type="Texture" id=6]
[ext_resource path="res://assets/Sliders/1.png" type="Texture" id=7]
[ext_resource path="res://assets/Small Text/1.png" type="Texture" id=8]
[ext_resource path="res://assets/Sliders/2.png" type="Texture" id=9]
[ext_resource path="res://misc/TextureButton.gd" type="Script" id=10]
[ext_resource path="res://materials/boards.tres" type="TileSet" id=11]
[ext_resource path="res://assets/Small Text/21.png" type="Texture" id=12]
[ext_resource path="res://assets/Small Text/9.png" type="Texture" id=13]
[ext_resource path="res://assets/Small Text/18.png" type="Texture" id=14]
[ext_resource path="res://assets/Small Text/8.png" type="Texture" id=15]
[ext_resource path="res://scenes/GameMenu/ModeOption.gd" type="Script" id=16]

[node name="ModeOption" type="Node2D"]
script = ExtResource( 16 )

[node name="OptPaper" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 32, 0, 1, 33, 0, 2, 33, 0, 3, 33, 0, 4, 34, 0, 65536, 38, 0, 65537, 39, 0, 65538, 39, 0, 65539, 39, 0, 65540, 40, 0 )

[node name="ModePaper" type="TileMap" parent="."]
position = Vector2( 16, 0 )
tile_set = ExtResource( 11 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 1, 41, 0, 2, 43, 0 )

[node name="Label" type="Node2D" parent="ModePaper"]
position = Vector2( -95, -64 )

[node name="13" type="Sprite" parent="ModePaper/Label"]
position = Vector2( 150, 80 )
texture = ExtResource( 1 )

[node name="15" type="Sprite" parent="ModePaper/Label"]
position = Vector2( 156, 80 )
texture = ExtResource( 5 )

[node name="4" type="Sprite" parent="ModePaper/Label"]
position = Vector2( 162, 80 )
texture = ExtResource( 4 )

[node name="5" type="Sprite" parent="ModePaper/Label"]
position = Vector2( 168, 80 )
texture = ExtResource( 2 )

[node name="PrevBtn" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 32.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="1" type="Sprite" parent="PrevBtn"]
position = Vector2( 10, 8 )
texture = ExtResource( 7 )

[node name="NextBtn" type="TextureButton" parent="."]
margin_left = 127.0
margin_top = 24.0
margin_right = 143.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="1" type="Sprite" parent="NextBtn"]
position = Vector2( 7, 8 )
texture = ExtResource( 9 )

[node name="EasyLabel" type="Node2D" parent="."]
position = Vector2( -132, -106 )
scale = Vector2( 1.2, 1.2 )

[node name="5" type="Sprite" parent="EasyLabel"]
position = Vector2( 168, 115 )
texture = ExtResource( 2 )

[node name="1" type="Sprite" parent="EasyLabel"]
position = Vector2( 174, 115 )
texture = ExtResource( 8 )

[node name="19" type="Sprite" parent="EasyLabel"]
position = Vector2( 180, 115 )
texture = ExtResource( 6 )

[node name="25" type="Sprite" parent="EasyLabel"]
position = Vector2( 186, 115 )
texture = ExtResource( 3 )

[node name="MediumLabel" type="Node2D" parent="."]
visible = false
position = Vector2( -137, -106 )
scale = Vector2( 1.2, 1.2 )

[node name="13" type="Sprite" parent="MediumLabel"]
position = Vector2( 167.5, 115 )
texture = ExtResource( 1 )

[node name="5" type="Sprite" parent="MediumLabel"]
position = Vector2( 173.333, 115 )
texture = ExtResource( 2 )

[node name="4" type="Sprite" parent="MediumLabel"]
position = Vector2( 179.167, 115 )
texture = ExtResource( 4 )

[node name="9" type="Sprite" parent="MediumLabel"]
position = Vector2( 185, 115 )
texture = ExtResource( 13 )

[node name="21" type="Sprite" parent="MediumLabel"]
position = Vector2( 190.833, 115 )
texture = ExtResource( 12 )

[node name="14" type="Sprite" parent="MediumLabel"]
position = Vector2( 196.667, 115 )
texture = ExtResource( 1 )

[node name="HardLabel" type="Node2D" parent="."]
visible = false
position = Vector2( -131, -106 )
scale = Vector2( 1.2, 1.2 )

[node name="8" type="Sprite" parent="HardLabel"]
position = Vector2( 167.5, 115 )
texture = ExtResource( 15 )

[node name="1" type="Sprite" parent="HardLabel"]
position = Vector2( 173.333, 115 )
texture = ExtResource( 8 )

[node name="18" type="Sprite" parent="HardLabel"]
position = Vector2( 179.167, 115 )
texture = ExtResource( 14 )

[node name="4" type="Sprite" parent="HardLabel"]
position = Vector2( 185, 115 )
texture = ExtResource( 4 )

[connection signal="pressed" from="PrevBtn" to="." method="_on_PrevBtn_pressed"]
[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
